<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_back">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/default_margin"
        android:background="@drawable/auth_background_form"
        android:paddingBottom="@dimen/default_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_label_appsnippet">

        <TextView
            android:id="@+id/view_btn_fast_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/margin_middle"
            android:background="@drawable/ripple_effect"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/btn_fast_auth"
            android:textColor="@color/colorSelectText"
            android:textSize="@dimen/textSize_middle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/view_btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_middle"
            android:layout_marginEnd="@dimen/default_margin"
            android:background="@drawable/ripple_effect"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/btn_sign_up"
            android:textColor="@color/colorText"
            android:textSize="@dimen/textSize_middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/margin_middle"
            android:layout_marginEnd="@dimen/default_margin"
            android:background="@color/colorDivider"
            app:layout_constraintTop_toBottomOf="@id/view_btn_fast_auth" />

        <TextView
            android:id="@+id/view_label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/email_label"
            android:textColor="@color/colorText"
            android:textSize="@dimen/textSize_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_divider" />

        <EditText
            android:id="@+id/view_edit_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/default_margin"
            android:background="@drawable/background_edit_form"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/padding_small"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_label_email" />

        <TextView
            android:id="@+id/view_label_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/password_label"
            android:textColor="@color/colorText"
            android:textSize="@dimen/textSize_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_edit_email" />

        <EditText
            android:id="@+id/view_edit_password"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_edit_form"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_label_password" />

        <Button
            android:id="@+id/view_btn_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@drawable/background_btn_enter"
            android:foreground="@drawable/ripple_effect"
            android:paddingStart="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_large"
            android:text="@string/btn_enter"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_edit_password" />

        <TextView
            android:id="@+id/view_label_recover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:background="@drawable/ripple_effect"
            android:clickable="true"
            android:text="@string/btn_recover"
            android:textColor="@color/colorText"
            android:textSize="@dimen/default_textSize"
            app:layout_constraintBottom_toBottomOf="@id/view_btn_enter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_btn_enter"
            android:focusable="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/view_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSize_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_label_appsnippet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/app_snippet"
        android:textColor="@color/colorText"
        android:textSize="@dimen/default_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/team"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSize_middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>